5 December 2013 Ike Devolder
	* restore 'old' way of creating make -a optional

30 November 2013 Ike Devolder
	* release: 0.6.0
	* test8: windows generated recovery files with subdir
	* windows recurses in . and .. which leads to deadlock
	  so dont recurse in folders starting with . on windows
	* when recursion happens make sure windows can recover with
	  unix created par2 files
	* fixed fc -> fd typo in windows part of diskfile
	* FTBFS fix on GNU/kFreeBSD (by Cyril Brulebois)
	* fixed non quiet output when creating par2
	* Applied fix preventing a stack overflow (by Robert Schneider)

14 October 2013 Ike Devolder
  * Implemented recursion
	* NOTE: only for unix like systems
	* Windows can be done i guess but i have no access to windows machines

16 June 2013 Ike Devolder
	* Implemented initial subdir handling
	* added subdir tests

13 June 2013 Ike Devolder
	* Fixed failing testsuite

9 December 2012 Ike Devolder
  * rework purging of par(2) files because of possible segfaults
    and other inconsistencies

4 December 2012 Ike Devolder
  * fix purge option so it removes the par files when there is no
    repair needed
  * add purge option to verify so when there is no repair needed
    the par2 files are removed when the purge option is given

30 November 2012 Ike Devolder
  * add purge option
    remove backup files (mostly .1) and par files on request
    **USE AT YOUR OWN RISK
  * purge option available in par1 and par2 repair
  * fix memory leak when using par1 repair

30 January 2012 Ike Devolder
	* add inlining performance improvement of Gerard Putter
	* release: 0.5.4

19 January 2012 Ike Devolder
	* fix wrongly created par2 files in quiet mode
	  this was related to the -q -qq fix
	* release: 0.5.3

17 January 2012 Ike Devolder
	* fix deadlock condition when repairing and filepath is longer
		than _MAX_PATH
	* increase _MAX_PATH, 255 is no longer of these days
	* release: 0.5.2

16 January 2012 Ike Devolder
	* fixup 0.5 version display